--- a/html/2-image.html
+++ b/html/2-image.html
@@ -120,8 +120,8 @@
             button.style.backgroundColor = color;
             button.value = paused[num] ? 'Resume' : 'Pause';
 
-            var image = document.getElementById('image_' + num);
-            image.style.borderColor = color;
+            var img = document.getElementById('image_' + num);
+            img.style.borderColor = color;
         }
 
         function togglePause(num) {
