--- a/html/2-image.html
+++ b/html/2-image.html
@@ -83,6 +83,7 @@
         var green = '#14CC06'
         var paused = [false, false];
         var urls = ['http://camera-gear.local:5800/image.jpg', 'http://camera-rope.local:5800/image.jpg']
+        var names = ['gear', 'rope']
 
         window.onload = function () {
             document.getElementById('header_0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
@@ -99,14 +100,14 @@
                 var warning = document.getElementById('status_' + num)
                 var image = new Image();
                 image.onload = function(){
-                    warning.innerHTML = "Connected to gear camera";
+                    warning.innerHTML = "Connected to ' + names[num] + ' camera";
                     warning.style.backgroundColor = green
                     img = document.getElementById('image_' + num);
                     img.getContext('2d').drawImage(image, 0, 0);
                     setTimeout(function(){ loadImage(num); }, _DELAY_SECS_ * 1000);
                 };
                 image.onerror = function(){
-                    warning.innerHTML = "Disconnected from gear camera";
+                    warning.innerHTML = "Disconnected from ' + names[num] + ' camera";
                     warning.style.backgroundColor = red
                     setTimeout(function(){ loadImage(num); },  1000);
                 }
