--- a/html/4-image.html
+++ b/html/4-image.html
@@ -83,54 +83,58 @@
         var red = '#FF3B22'
         var green = '#14CC06'
         var paused = [false, false, false, false];
+        var urls = ['http://localhost:8080/image.jpg',
+                    'http://localhost:8081/image.jpg',
+                    'http://localhost:8081/image.jpg',
+                    'http://localhost:8081/image.jpg']
 
         window.onload = function () {
             document.getElementById('header0').innerHTML = "Front Gear (_DELAY_SECS_ secs)";
             setButton(0);
-            loadImage(0, 'http://localhost:8080/image.jpg');
+            loadImage(0);
 
             document.getElementById('header1').innerHTML = "Rope Climber1 (_DELAY_SECS_ secs)";
             setButton(1);
-            loadImage(1, 'http://localhost:8081/image.jpg');
+            loadImage(1);
 
             document.getElementById('header2').innerHTML = "Rope Climber2 (_DELAY_SECS_ secs)";
             setButton(2);
-            loadImage(2, 'http://localhost:8081/image.jpg');
+            loadImage(2);
 
             document.getElementById('header3').innerHTML = "Rope Climber3 (_DELAY_SECS_ secs)";
             setButton(3);
-            loadImage(3, 'http://localhost:8081/image.jpg');
+            loadImage(3);
         };
 
-        function loadImage(num, url) {
+        function loadImage(num) {
             if (!(paused[num])) {
-                warning = document.getElementById('status' + num)
-                image = new Image();
+                var warning = document.getElementById('status' + num)
+                var image = new Image();
                 image.onload = function(){
                     warning.innerHTML = "Connected to image server";
                     warning.style.backgroundColor = green
                     ctx = document.getElementById('image' + num).getContext('2d');
                     ctx.drawImage(image, 0, 0);
-                    setTimeout(function(){ loadImage(num, url); }, _DELAY_SECS_ * 1000);
+                    setTimeout(function(){ loadImage(num, urls[num]); }, _DELAY_SECS_ * 1000);
                 };
                 image.onerror = function(){
                     warning.innerHTML = "Disconnected from image server";
                     warning.style.backgroundColor = red
-                    setTimeout(function(){ loadImage(num, url); },  1000);
+                    setTimeout(function(){ loadImage(num, urls[num]); },  1000);
                 }
-                image.src = url;
+                image.src = urls[num];
             }
         }
 
         function setButton(num) {
-            image = document.getElementById('image' + num);
+            var image = document.getElementById('image' + num);
             image.style.borderColor = paused[num] ? red : green;
         }
 
-        function togglePause(num, url) {
+        function togglePause(num) {
             paused[num] = !(paused[num])
             setButton(num)
-            loadImage(num, url);
+            loadImage(num);
         }
 
         function refreshDelay(time) {
@@ -181,7 +185,7 @@
 
             <div>
                 <canvas class="image" id="image0" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause(0, 'http://localhost:8080/image.jpg')"></canvas>
+                        onclick="togglePause(0)"></canvas>
             </div>
         </td>
         <td>
@@ -198,7 +202,7 @@
 
             <div>
                 <canvas class="image" id="image1" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause(1, 'http://localhost:8081/image.jpg')"></canvas>
+                        onclick="togglePause(1)"></canvas>
             </div>
         </td>
     </tr>
@@ -217,7 +221,7 @@
 
             <div>
                 <canvas class="image" id="image2" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause(2, 'http://localhost:8080/image.jpg')"></canvas>
+                        onclick="togglePause(2)"></canvas>
             </div>
         </td>
         <td>
@@ -234,7 +238,7 @@
 
             <div>
                 <canvas class="image" id="image3" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause(3, 'http://localhost:8081/image.jpg')"></canvas>
+                        onclick="togglePause(3)"></canvas>
             </div>
         </td>
     </tr>
