--- a/html/2-image.html
+++ b/html/2-image.html
@@ -82,7 +82,8 @@
         var red = '#FF3B22'
         var green = '#14CC06'
         var paused = [false, false];
-        var urls = ['http://camera-gear.local:5800/image.jpg', 'http://camera-rope.local:5800/image.jpg']
+        // var urls = ['http://camera-gear.local:5800/image.jpg', 'http://camera-rope.local:5800/image.jpg']
+        var urls = ['http://camera-gear.local:5800/image.jpg', 'http://camera-gear.local:8082/image.jpg']
         var names = ['gear', 'rope']
 
         window.onload = function () {
