Fix pause problem

--- a/html/2-image.html
+++ b/html/2-image.html
@@ -96,7 +96,7 @@
         };
 
         function loadImage(num) {
-            if (!(paused[0])) {
+            if (!(paused[num])) {
                 var warning = document.getElementById('status_' + num)
                 var image = new Image();
                 image.onload = function(){
